--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -9,10 +9,13 @@
             <div class="mb-3">
                 <label for="tittle" class="form-label">Title</label>
                 <input type="text"  name="listing[tittle]" placeholder="Add a catchy tittle" class="form-control" required>
+                <div class="valid-feedback">Tittle Looks Good</div>
             </div>
+         
           <div>
             <label for="description" class="form-label">Description</label>
             <textarea  name="listing[description]" class="form-control" required></textarea>
+            <div class="invalid-feedback">Please enter description</div>
           </div>
            <div class="mb-3">
             <label for="image" class="form-label">Image Link</label>
@@ -21,17 +24,20 @@
            <div class="row">
             <div class="mb-3 col-md-4">
                 <label for="price" class="form-label">price </label>
-                <input  type="number" name="listing[price]" placeholder="Enter price" class="form-control" required>
+                <input   name="listing[price]" placeholder="Enter price" class="form-control" required>
+                <div class="invalid-feedback">Please enter a valid price</div>
                </div>
                <div class="mb-3 col-md-8">
                 <label for="country" class="form-label">Country</label>
                 <input type="text" name="listing[country]" placeholder="India" class="form-control" required>
+                <div class="invalid-feedback">country name should be valid</div>
                </div>
            </div>
            
            <div class="mb-3">
             <label for="location" class="form-label">Location</label>
             <input type="text" name="listing[location]" placeholder="Jaipur, mumbai,delhi" class="form-control" required>
+            <div class="invalid-feedback">location should be valid</div>
            </div>
             <button class="btn btn-dark add-btn">Submit</button>
             <br>
