--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -7,8 +7,8 @@
         </div>
         <div class="f-info-brand">&copy Wanderlust Private Limited</div>
         <div class="f-info-links">
-            <a href="/privicy">Privicy</a>
-            <a href="terms">Terms</a>
+            <a href="/privicy">Privacy</a>
+            <a href="/terms">Terms</a>
         </div>
     </div>
 </footer>
