review section added

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,5 +1,5 @@
 <% layout("/layouts/boilerplate") %>
 
 <body>
-    <h3>page not found</h3>
+    <h3 class="display-4 text-danger bg-light offset-3"> Page not found</h3>
 </body>
