--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,33 +1,68 @@
 <% layout("/layouts/boilerplate") %>
 
-    <body>
-        <div class="row mt-3">
-            <div class="col-8 offset-3">
-                <h3>Listing details :</h3>
-            </div>
-            <div class="card col-6 offset-3 show-card">
-                <div class="card" style="width: 18rem;">
-                    <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing image">
-                    <div class="card-body">
-                        <b>
-                            <p class="card-text">
-                                <%= listing.tittle %>
-                            </p>
-                        </b><br>
-                        <%= listing.description %> <br>
-                            &#8377; <%= listing.price ? listing.price.toLocaleString('en-IN') : "N/A" %>
-                                <br>
-                                <%= listing.location %> <br>
-                                    <%= listing.country %>
-                    </div>
-                </div>
-            </div>
-            <br>
+<body>
+  <div class="row mt-3">
+    <div class="col-8 offset-3">
+      <h3><%= listing.tittle %></h3>
+    </div>
+    <div class="card col-6 offset-3 show-card">
+      <div class="card" style="width: 18rem">
+        <img
+          src="<%=listing.image.url%>"
+          class="card-img-top show-img"
+          alt="listing image"
+        />
+        <div class="card-body">
+          <b> <p class="card-text"></p> </b><br />
+          <%= listing.description %> <br />
+          &#8377; <%= listing.price ? listing.price.toLocaleString('en-IN') :
+          "N/A" %>
+          <br />
+          <%= listing.location %> <br />
+          <%= listing.country %>
         </div>
-        <div class="btns"><a href="/listings/<%= listing._id %>/edit "
-                class="btn btn-dark col-1 offset-3 edit-btn mb-4">Edit</a>
-            <form action="/listings/<%= listing._id%>?_method=DELETE" method="POST">
-                <button class="btn btn-dark offset-5 mb-4">Delete</button>
-            </form>
-        </div>
-    </body>
+      </div>
+    </div>
+    <br />
+  </div>
+  <div class="btns">
+    <a
+      href="/listings/<%= listing._id %>/edit "
+      class="btn btn-dark col-1 offset-3 edit-btn mb-4"
+      >Edit</a
+    >
+    <form action="/listings/<%= listing._id%>?_method=DELETE" method="POST">
+      <button class="btn btn-dark offset-5 mb-4">Delete</button>
+    </form>
+  </div>
+  <hr />
+  <div class="col-8 offset-3 mb-3">
+    <h4>Leave a Review</h4>
+    <form action="/listings/<%= listing.id%>/rewiews" method="POST" novalidate class="needs-validation">
+      <div class="mb-3">
+        <label class="form-label" for="rating">Rating</label>
+        <input
+          type="range"
+          min="1"
+          max="5"
+          id="rating"
+          name="review[rating]"
+          class="form-range"
+        />
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="comment">Comments</label>
+        <textarea
+          name="review[comments]"
+          id="comment"
+          cols="30"
+          rows="5"
+          class="form-control"
+          required
+        ></textarea>
+        <div class="invalid-feedback">Please enter  some comments </div>
+      </div>
+      <button class="btn btn-outline-dark">Submit</button>
+    </form>
+  </div>
+</body>
