--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -27,6 +27,8 @@
     </div>
     <br />
   </div>
+ 
+  <% if(currUser && listing.owner._id.equals(currUser._id)) {%>
   <div class="btns">
     <a
       href="/listings/<%= listing._id %>/edit"
@@ -37,8 +39,11 @@
       <button class="btn btn-dark offset-5 mb-4">Delete</button>
     </form>
   </div>
-  <hr />
+  <%}%>
+
+  
   <div class="col-8 offset-3 mb-3">
+    <% if(currUser) {%>
     <h4>Leave a Review</h4>
     <form
       action="/listings/<%= listing.id%>/reviews"
@@ -71,13 +76,14 @@
       </div>
       <button class="btn btn-outline-dark">Submit</button>
     </form>
+    <% } %>
     <hr />
     <p><b>All Reviews</b></p>
     <div class="row">
       <% for(review of listing.reviews) { %>
       <div class="card col-5 ms-3 mb-3">
         <div class="card-body">
-          <h5 class="card-title">Jane Doe</h5>
+          <h5 class="card-title"> @<%= review.author.username %> </h5>
           <p class="card-text"><%= review.comment %></p>
           <p class="card-text mb-1"><%= review.rating %> Stars</p>
         </div>
