--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,5 +1,7 @@
-<% layout("/layouts/boilerplate") %>
+<% layout("layouts/boilerplate") %>
 
-<body>
-    <h3 class="display-4 text-danger bg-light offset-3"> Page not found</h3>
-</body>
+<div class="container text-center mt-5">
+  <h1 class="display-4 text-danger">404 - Page Not Found</h1>
+  <p class="lead">The page you are looking for doesn’t exist.</p>
+  <a href="/" class="btn btn-primary mt-3">Go to Home</a>
+</div>
