--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -40,7 +40,7 @@
       </div>
 
       <div class="navbar-nav ms-auto">
-        <form class="d-flex" role="search">
+        <form class="d-flex me-3" role="search">
           <input
             class="form-control me-2 search-input"
             type="search"
@@ -50,20 +50,17 @@
             <i class="fa-solid fa-magnifying-glass"></i>Search
           </button>
         </form>
-      </div>
 
-      <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Airbnb your home</a>
 
-        <% if (typeof currUser !== 'undefined' && !currUser) { %>
+        <% if (!currUser) { %>
           <a class="nav-link" href="/signup"><b>Sign Up</b></a>
           <a class="nav-link" href="/login"><b>Log In</b></a>
-        <% } %>
-
-        <% if (typeof currUser !== 'undefined' && currUser) { %>
+        <% } else { %>
           <a class="nav-link" href="/logout">Log Out</a>
         <% } %>
       </div>
     </div>
   </div>
 </nav>
+
