--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,146 +1,91 @@
 <% layout("/layouts/boilerplate") %>
+
 <style>
-  #filters{
+  .filter-bar {
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 1.5rem;
+    padding: 1rem 0;
   }
-  .filter{
+  .filter {
     text-align: center;
-    margin-right: 2.5rem;
-    margin-top: 2rem;
+    flex: 0 0 auto;
     opacity: 0.7;
   }
-  .filter:hover{
+  .filter:hover {
     opacity: 1;
     cursor: pointer;
   }
-  .filter p{
-    font-size:  0.8rem;
+  .filter p {
+    font-size: 0.8rem;
   }
-  .tax-info{
+  .tax-info {
     display: none;
   }
   .tax-toggle {
-  border: 1px solid black;
-  border-radius: 1rem;
-  height: 3.2rem;
-  padding: 1rem;
-  margin-left: 5rem;
-  display: flex;
-  align-items: center;
-}
-
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3.2rem;
+    padding: 0 1rem;
+    flex: 0 0 auto;
+    display: flex;
+    align-items: center;
+  }
 </style>
+
 <body>
-    <!-- <h3>All listings</h3> -->
-    <!-- <form action="/listings/new" method="GET">
-        <button>Create new listings</button>
-    </form> -->
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-fire"></i></div>
-    <p>Trending</p>
-  </div>
 
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-bed"></i></div>
-    <p>Rooms</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-mountain-city"></i></div>
-    <p>Iconic Cities</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-mountain"></i></div>
-    <p>Mountains</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-brands fa-fort-awesome"></i></div>
-    <p>Castles</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-person-swimming"></i></div>
-    <p>Amazing pools</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-campground"></i></div>
-    <p>Camping</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-cow"></i></div>
-    <p>Farms</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-snowflake"></i></div>
-    <p>Arctic</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-igloo"></i></div>
-    <p>Domes</p>
-  </div>
-</div>
-<div id="filters">
-  <div class="filter">
-    <div><i class="fa-solid fa-ship"></i></div>
-    <p>Boats</p>
-  </div>
-</div>
-<div class="tax-toggle">
-  <div class="form-check-reverse form-switch">
-    <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
-    <label class="form-check-label" for="switchCheckDefault">Display total after taxes</label>
-  </div>
-</div>
-</div>
+  <div class="container">
+    <div id="filters" class="filter-bar">
+      <div class="filter"><i class="fa-solid fa-fire"></i><p>Trending</p></div>
+      <div class="filter"><i class="fa-solid fa-bed"></i><p>Rooms</p></div>
+      <div class="filter"><i class="fa-solid fa-mountain-city"></i><p>Iconic Cities</p></div>
+      <div class="filter"><i class="fa-solid fa-mountain"></i><p>Mountains</p></div>
+      <div class="filter"><i class="fa-brands fa-fort-awesome"></i><p>Castles</p></div>
+      <div class="filter"><i class="fa-solid fa-person-swimming"></i><p>Amazing Pools</p></div>
+      <div class="filter"><i class="fa-solid fa-campground"></i><p>Camping</p></div>
+      <div class="filter"><i class="fa-solid fa-cow"></i><p>Farms</p></div>
+      <div class="filter"><i class="fa-solid fa-snowflake"></i><p>Arctic</p></div>
+      <div class="filter"><i class="fa-solid fa-igloo"></i><p>Domes</p></div>
+      <div class="filter"><i class="fa-solid fa-ship"></i><p>Boats</p></div>
 
-   <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
-    <%for(let listing of alllistings){%>
-        <a class="listing-link" href="/listings/<%=listing._id %>">
-        <div class="card col listing-card"  >
-            <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem;">
-            <div class="card-img-overlay"></div>
-            <div class="card-body">
-              <p class="card-text">
-               <b> <%= listing.tittle %></p></b></b> <br>
-               &#8377; <%= listing.price ? listing.price.toLocaleString('en-IN') : "N/A" %>
-               <i class="tax-info">&nbsp; +18% GST</i>
+      <div class="tax-toggle">
+        <div class="form-check-reverse form-switch">
+          <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+          <label class="form-check-label" for="switchCheckDefault">Display total after taxes</label>
+        </div>
+      </div>
+    </div>
+
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1 g-4 mt-3">
+      <% for (let listing of alllistings) { %>
+        <div class="col">
+          <a class="listing-link text-decoration-none" href="/listings/<%= listing._id %>">
+            <div class="card listing-card h-100">
+              <img src="<%= listing.image.url %>" class="card-img-top" alt="listing_image" style="height: 20rem; object-fit: cover;">
+              <div class="card-body">
+                <p class="card-text">
+                  <b><%= listing.tittle %></b><br>
+                  &#8377; <%= listing.price ? listing.price.toLocaleString('en-IN') : "N/A" %>
+                  <i class="tax-info">&nbsp; +18% GST</i>
+                </p>
+              </div>
             </div>
-          </div>
-        </a>
-          <% } %>
-   </div>
-   <script>
-    let taxSwitch=document.getElementById("switchCheckDefault");
-    taxSwitch.addEventListener("click", ()=>{
-      let taxInfo=document.getElementsByClassName("tax-info")
-      for(info of taxInfo){
-        if(info.style.display !="inline"){
-  info.style.display="inline"
-        }
-      else{
-        info.style.display="none"
+          </a>
+        </div>
+      <% } %>
+    </div>
+  </div>
+
+  <script>
+    let taxSwitch = document.getElementById("switchCheckDefault");
+    taxSwitch.addEventListener("click", () => {
+      let taxInfo = document.getElementsByClassName("tax-info");
+      for (let info of taxInfo) {
+        info.style.display = (info.style.display !== "inline") ? "inline" : "none";
       }
-      }
-    })
-   </script>
+    });
+  </script>
+
 </body>
-
-
