--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,66 +1,58 @@
-<style>
-  .search-btn {
-    background-color: #fe424d;
-    color: #fff;
-    border-radius: 25px;
-    padding: 0 1rem;
-  }
-  .search-btn:hover {
-    background-color: #fe424d;
-    color: #fff;
-  }
-  .search-btn i {
-    display: inline;
-    margin-right: 0.5rem;
-  }
-  .search-input {
-    border-radius: 25px;
-    padding: 0.5rem 3rem;
-    font-size: 1rem;
-  }
-</style>
-
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/listings/">
       <i class="fa-regular fa-compass"></i>
     </a>
+
     <button
       class="navbar-toggler"
       type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavAltMarkup"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link" href="/listings">Explore</a>
+    <div
+      class="offcanvas offcanvas-start"
+      tabindex="-1"
+      id="offcanvasNavbar"
+      aria-labelledby="offcanvasNavbarLabel"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
       </div>
+      <div class="offcanvas-body">
+        <div class="navbar-nav">
+          <a class="nav-link" href="/listings">Explore</a>
+          <a class="nav-link" href="/listings/new">Airbnb your home</a>
 
-      <div class="navbar-nav ms-auto">
-        <form class="d-flex me-3" role="search">
+          <% if (!currUser) { %>
+          <a class="nav-link" href="/signup"><b>Sign Up</b></a>
+          <a class="nav-link" href="/login"><b>Log In</b></a>
+          <% } else { %>
+          <a class="nav-link" href="/logout">Log Out</a>
+          <% } %>
+        </div>
+
+        <form class="d-flex mt-3" role="search">
           <input
             class="form-control me-2 search-input"
             type="search"
             placeholder="Search destinations"
           />
-          <button class="btn search-btn" type="submit">
+          <button class="btn search-btn btn-danger" type="submit">
             <i class="fa-solid fa-magnifying-glass"></i>Search
           </button>
         </form>
-
-        <a class="nav-link" href="/listings/new">Airbnb your home</a>
-
-        <% if (!currUser) { %>
-          <a class="nav-link" href="/signup"><b>Sign Up</b></a>
-          <a class="nav-link" href="/login"><b>Log In</b></a>
-        <% } else { %>
-          <a class="nav-link" href="/logout">Log Out</a>
-        <% } %>
       </div>
     </div>
   </div>
 </nav>
-
