--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -36,8 +36,8 @@
 
 <body>
 
-  <div class="container">
-    <div id="filters" class="filter-bar">
+  <div class="container mt-3">
+    <div id="filters" class="filter-bar" >
       <div class="filter"><i class="fa-solid fa-fire"></i><p>Trending</p></div>
       <div class="filter"><i class="fa-solid fa-bed"></i><p>Rooms</p></div>
       <div class="filter"><i class="fa-solid fa-mountain-city"></i><p>Iconic Cities</p></div>
